--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
-psycopg2-binary
+Flask-Migrate==3.1.0
+Flask-CORS==3.0.10
+psycopg2==2.9.3
 requests==2.27.1
 beautifulsoup4==4.10.0
-python-dotenv==0.19.2
 selenium==4.1.0
 webdriver_manager==3.5.2
+gunicorn==20.1.0
+python-dotenv==0.19.2
