--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 # PostgreSQL
-POSTGRES_USER=user
-POSTGRES_PASSWORD=strongpass
+POSTGRES_USER=xxxx
+POSTGRES_PASSWORD=xxxxxxxxx
 POSTGRES_DB=jobsdb
 
 # PGAdmin
-PGADMIN_EMAIL=egmiguel18@gmail.com
-PGADMIN_PASSWORD=strongpass
+PGADMIN_EMAIL=xxxxxxxxxxxxxxxxxxx
+PGADMIN_PASSWORD=xxxxxxxx
 
 # Redis
-REDIS_PASSWORD=strongredispass
+REDIS_PASSWORD=xxxxxxxxxxxxx
 
 
-LINKEDIN_EMAIL=egmiguel18@gmail.com
-LINKEDIN_PASSWORD=Eg183041
-GLASSDOOR_EMAIL=egmiguel18@gmail.com
-GLASSDOOR_PASSWORD=Eg183041
+LINKEDIN_EMAIL=xxxxxxxxxxxxxxxxxx
+LINKEDIN_PASSWORD=xxxxxxxxxxxxxxx
+GLASSDOOR_EMAIL=xxxxxxxxxxxxxxxxx
+GLASSDOOR_PASSWORD=xxxxxxxxxxxx
